# SFML-FlockingSimulation

./: CMakeLists.txt  README.md
others/include/boids/: boid.hpp
others/include/engine/: canvas.hpp  vector.hpp
source/: main.cpp
source/boids/: boid.cpp  run.cpp
source/engine/: shapes.cpp  vector.cpp
